# vectordb

./: CMakeLists.txt
prompts/: base_prompt  cmake_gen  data_model  data_model.md  query_eval.md  service_def.md
src/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: .gen_cpp_pr.sh.swp  gen_cpp_pr.sh  generate_cpp_from_prompts.py
